Bug 777594 - Use mozSettings to turn on/off Geolocation. r=jdm